--- a/DichVuBus/WebBus/Areas/Auth/Views/Account/Login.cshtml
+++ b/DichVuBus/WebBus/Areas/Auth/Views/Account/Login.cshtml
@@ -1,9 +1,4 @@
-﻿
-@{
-    Layout = null;
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
 <head>
@@ -11,7 +6,20 @@
     <title>Login</title>
 </head>
 <body>
-    <div> 
+    <div>
+        <h2>Đăng nhập Admin</h2>
+        <form method="post" class="mt-3">
+            <div class="text-danger">@ViewBag.Error</div>
+            <div class="mb-3">
+                <label>Username</label>
+                <input type="text" name="username" class="form-control" />
+            </div>
+            <div class="mb-3">
+                <label>Password</label>
+                <input type="password" name="password" class="form-control" />
+            </div>
+            <button type="submit" class="btn btn-primary">Đăng nhập</button>
+        </form>
     </div>
 </body>
 </html>
