--- a/DichVuBus/WebBus/Areas/Auth/Views/Account/Login.cshtml
+++ b/DichVuBus/WebBus/Areas/Auth/Views/Account/Login.cshtml
@@ -1,25 +1,64 @@
-﻿<!DOCTYPE html>
-
-<html>
+﻿
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Trang Đăng Nhập</title>
+
+    <!-- Font Icon -->
+    <link rel="stylesheet" href="~/Assets/Auth/fonts/material-icon/css/material-design-iconic-font.min.css">
+    <!-- Main css -->
+    <link rel="stylesheet" href="~/Assets/Auth/css/style.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
-    <div>
-        <h2>Đăng nhập Admin</h2>
-        <form method="post" class="mt-3">
-            <div class="text-danger">@ViewBag.Error</div>
-            <div class="mb-3">
-                <label>Username</label>
-                <input type="text" name="username" class="form-control" />
+    <div class="main">
+        <!-- Form Đăng Nhập -->
+        <section class="sign-in">
+            <div class="container">
+                <div class="signin-content">
+                    <div class="signin-image">
+                        <figure><img src="~/Assets/Auth/images/Login_img.jpg" alt="sing up image"></figure>
+                        <a href="#" class="signup-image-link">Tạo mới tài khoản</a>
+                    </div>
+
+                    <div class="signin-form">
+                        <h2 class="form-title">Đăng Nhập</h2>
+                        <form method="POST" class="register-form" id="login-form">
+                            <div class="form-group">
+                                <label for="username"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="username" id="username" placeholder="Tài Khoản" />
+                            </div>
+                            <div class="form-group">
+                                <label for="password"><i class="zmdi zmdi-lock"></i></label>
+                                <input type="password" name="password" id="password" placeholder="Mật Khẩu" />
+                            </div>
+                            <div class="form-group">
+                                <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
+                                <label for="remember-me" class="label-agree-term"><span><span></span></span>Ghi nhớ tài khoản</label>
+                            </div>
+                            <div class="form-group form-button">
+                                <input type="submit" name="signin" id="signin" class="form-submit" value="Đăng Nhập" />
+                            </div>
+                        </form>
+                        <div class="social-login">
+                            <span class="social-label">Đăng nhập với</span>
+                            <ul class="socials">
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-facebook"></i></a></li>
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-twitter"></i></a></li>
+                                <li><a href="#"><i class="display-flex-center zmdi zmdi-google"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="mb-3">
-                <label>Password</label>
-                <input type="password" name="password" class="form-control" />
-            </div>
-            <button type="submit" class="btn btn-primary">Đăng nhập</button>
-        </form>
+        </section>
+
     </div>
+
+    <!-- JS -->
+    <script src="~/Assets/Auth/vendor/jquery/jquery.min.js"></script>
 </body>
 </html>
