--- a/DichVuBus/WebBus/Areas/Admin/Views/HocSinh/Index.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/HocSinh/Index.cshtml
@@ -1,12 +1,12 @@
-﻿@model List<WebBus.Models.HocSinh>
+﻿@model List<WebBus.Models.ViewModels.HocSinhViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Danh Sách Học Sinh";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
 <div class="title-block">
-    <h1 class="title"> Danh Sách Học Sinh </h1>
+    <h1 class="title">Danh Sách Học Sinh</h1>
 </div>
 <section class="section">
     <div class="row">
@@ -18,7 +18,7 @@
                             <div class="form-group mb-0">
                                 <input type="text" id="searchInput" class="form-control" placeholder="Tìm kiếm Học Sinh..." style="max-width: 300px;">
                             </div>
-                            <a href="~/Admin/NguoiDung/Create" class="btn btn-oval btn-primary">Thêm Mới Học Sinh</a>
+                            <a href="@Url.Action("Create")" class="btn btn-oval btn-primary">Thêm Mới Học Sinh</a>
                         </div>
                     </div>
                     <section class="example">
@@ -40,22 +40,40 @@
                                             <td>@item.userId</td>
                                             <td>@item.hoTen</td>
                                             <td>@item.lop</td>
-                                            <td>@item.tuyenDuongId</td>
+                                            <td>@item.tenTuyenDuong</td>
                                             <td style="text-align:center">
-                                                <a href="~/Admin/HocSinh/Delete?id=@item.userId">
-                                                    <i class="fa fa-trash"></i>
-                                                </a> |
-                                                <a href="~/Admin/HocSinh/Edit?id=@item.userId">
-                                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                                                </a> |
-                                                <a href="~/Admin/HocSinh/Details?id=@item.userId">
-                                                    <i class="fa fa-info-circle" aria-hidden="true"></i>
-                                                </a>
+                                                <a href="@Url.Action("Delete", new { id = item.Id })"><i class="fa fa-trash"></i></a> |
+                                                <a href="@Url.Action("Edit", new { id = item.Id })"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> |
+                                                <a href="@Url.Action("Details", new { id = item.Id })"><i class="fa fa-info-circle" aria-hidden="true"></i></a>
                                             </td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
+                        </div>
+
+                        <!-- Phân trang -->
+                        <div class="d-flex justify-content-center mt-3">
+                            <ul class="pagination">
+                                @if (ViewBag.CurrentPage > 1)
+                                {
+                                    <li class="page-item">
+                                        <a class="page-link" href="@Url.Action("Index", new { page = ViewBag.CurrentPage - 1 })">Trước</a>
+                                    </li>
+                                }
+                                @for (int i = 1; i <= ViewBag.TotalPages; i++)
+                                {
+                                    <li class="page-item @(i == ViewBag.CurrentPage ? "active" : "")">
+                                        <a class="page-link" href="@Url.Action("Index", new { page = i })">@i</a>
+                                    </li>
+                                }
+                                @if (ViewBag.CurrentPage < ViewBag.TotalPages)
+                                {
+                                    <li class="page-item">
+                                        <a class="page-link" href="@Url.Action("Index", new { page = ViewBag.CurrentPage + 1 })">Sau</a>
+                                    </li>
+                                }
+                            </ul>
                         </div>
                     </section>
                 </div>
@@ -64,12 +82,13 @@
     </div>
 </section>
 
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
     $(document).ready(function () {
         $("#searchInput").on("keyup", function () {
             var value = $(this).val().toLowerCase();
             $("#khachHangTable tbody tr").filter(function () {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1);
             });
         });
     });
