--- a/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -147,71 +147,23 @@
                                 </a>
                             </li>
                             <li class="sidebar-nav">
-                                <a href="~/Admin/NhanVien/Index">
-                                    <i class="fa fa-user-o"></i> Người Dùng
+                                <a href="~/Admin/HocSinh/Index">
+                                    <i class="fa fa-user-o"></i> Học Sinh
                                 </a>
                             </li>
                             <li class="sidebar-nav">
-                                <a href="~/Admin/Home/Index">
-                                    <i class="fa fa-shopping-bag"></i> Sản Phẩm
-                                </a>
-                            </li>
-                            <li>
-                                <a href="~/Admin/DonHang/DonHangAll">
-                                    <i class="fa fa-truck"></i> Đơn Hàng <i class="fa arrow"></i>
-                                </a>
-                                <ul class="sidebar-nav">
-                                    <li>
-                                        <a href="~/Admin/DonHang/DonHangAll"> All </a>
-                                    </li>
-                                    <li>
-                                        <a href="~/Admin/DonHang/DonHangXacNhan"> Đang Duyệt </a>
-                                    </li>
-                                    <li>
-                                        <a href="~/Admin/DonHang/DonHangDangGiao"> Đang Giao </a>
-                                    </li>
-                                    <li>
-                                        <a href="~/Admin/DonHang/DonHangDaGiao"> Đã Giao </a>
-                                    </li>
-                                    <li>
-                                        <a href="~/Admin/DonHang/DonHangDaHuy"> Đã Hủy </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-table"></i> Kho <i class="fa arrow"></i>
-                                </a>
-                                <ul class="sidebar-nav">
-                                    <li>
-                                        <a href="/Admin/kho/SanPhamBanChay"> Sản Phẩm bán chạy </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/kho/SanPhamTonKho"> Sản Phẩm Tồn </a>
-                                    </li>
-                                    <li>
-                                        <a href="/Admin/kho/SanPhamBanHet"> Sản Phẩm Bán Hết </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a>
-                                    <i class="fa fa-bar-chart"></i> Thống Kê <i class="fa arrow"></i>
-                                </a>
-                                <ul class="sidebar-nav">
-                                    <li>
-                                        <a href="~/Admin/ThongKe/Thongke"> Tổng Thống Kê </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="sidebar-nav">
-                                <a href="~/Admin/TinTuc/Index">
-                                    <i class="fa fa-newspaper-o"></i> Tin Tức
+                                <a href="~/Admin/XeBus/Index">
+                                    <i class="fa fa-truck"></i> Xe Bus
                                 </a>
                             </li>
                             <li class="sidebar-nav">
-                                <a href="~/Admin/LoaiSanPham/Index">
-                                    <i class="fa fa-sitemap"></i> Danh Mục
+                                <a href="~/Admin/XeBus/Index">
+                                    <i class="fa fa-truck"></i> Tuyến Đường
+                                </a>
+                            </li>
+                            <li class="sidebar-nav">
+                                <a href="~/Admin/XeBus/Index">
+                                    <i class="fa fa-sitemap"></i> Lịch Trình
                                 </a>
                             </li>
                         </ul>
