--- a/DichVuBus/WebBus/Areas/HocSinh/Views/Home/Index.cshtml
+++ b/DichVuBus/WebBus/Areas/HocSinh/Views/Home/Index.cshtml
@@ -272,7 +272,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-6">
                             <div class="tuyen-duong-card wow fadeInUp" data-wow-duration="1000ms">
                                 <h3>@tuyen.tenTuyen</h3>
-                                <p>Xe Buýt: @tuyen.BienSoXe</p>
+                                <p>Xe Buýt: @tuyen.bienSoXe</p>
                             </div>
                         </div>
                     }
