--- a/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -157,7 +157,7 @@
                                 </a>
                             </li>
                             <li class="sidebar-nav">
-                                <a href="~/Admin/XeBus/Index">
+                                <a href="~/Admin/TuyenDuong/Index">
                                     <i class="fa fa-truck"></i> Tuyến Đường
                                 </a>
                             </li>
