--- a/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -39,13 +39,6 @@
                     </button>
                 </div>
                 <div class="header-block header-block-search">
-                    @*<form role="search">
-                            <div class="input-container">
-                                <i class="fa fa-search"></i>
-                                <input type="search" placeholder="Tìm kiếm...">
-                                <div class="underline"></div>
-                            </div>
-                        </form>*@
                 </div>
                 <div class="header-block header-block-buttons">
                     <a href="~/Admin/Home/Index" class="btn btn-sm header-btn">
@@ -149,6 +142,11 @@
                             <li class="sidebar-nav">
                                 <a href="~/Admin/HocSinh/Index">
                                     <i class="fa fa-user-o"></i> Học Sinh
+                                </a>
+                            </li>
+                            <li class="sidebar-nav">
+                                <a href="~/Admin/User/Index">
+                                    <i class="fa fa-user-o"></i> Người Dùng
                                 </a>
                             </li>
                             <li class="sidebar-nav">
