--- a/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -43,11 +43,11 @@
                 <div class="header-block header-block-buttons">
                     <a href="~/Admin/Home/Index" class="btn btn-sm header-btn">
                         <i class="fa fa-wpforms"></i>
-                        <span>Sản Phẩm</span>
+                        <span>Admin</span>
                     </a>
-                    <a href="~/Customers/Home/Index" target="_blank" class="btn btn-sm header-btn">
+                    <a href="~/HocSinh/Home/Index" target="_blank" class="btn btn-sm header-btn">
                         <i class="fa fa-address-book" aria-hidden="true"></i>
-                        <span>Trang Người Dùng</span>
+                        <span>Học Sinh</span>
                     </a>
                 </div>
                 <div class="header-block header-block-nav">
