--- a/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -117,7 +117,7 @@
                                     <i class="fa fa-gear icon"></i> Cài Đặt
                                 </a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/Auth/Account/Login">
+                                <a class="dropdown-item" href="/Auth/Account/DangXuatHocSinh">
                                     <i class="fa fa-power-off icon"></i> Đăng Xuất
                                 </a>
                             </div>
