--- a/DichVuBus/WebBus/Areas/HocSinh/Views/Shared/_LayoutHocSinh.cshtml
+++ b/DichVuBus/WebBus/Areas/HocSinh/Views/Shared/_LayoutHocSinh.cshtml
@@ -8,8 +8,8 @@
     <meta name="description" content="Shelly - Website">
     <meta name="author" content="merkulove">
     <meta name="keywords" content="">
-    <link rel="icon" href="~/Assets/Student/img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="~/Assets/Student/css/main.min.css">
+    <link rel="icon" href="~/Assets/HocSinh/img/favicon.png">
+    <link rel="stylesheet" type="text/css" href="~/Assets/HocSinh/css/main.min.css">
 </head>
 <body>
     <div class="wrapper">
@@ -17,15 +17,15 @@
             <div class="container">
                 <div class="header-content d-flex flex-wrap align-items-center">
                     <div class="logo">
-                        <a href="/Student/Home/Index" title="">
-                            <img src="~/Assets/Student/img/logo.png" alt="" srcset="~/Assets/Student/img/01_Logo_2x.png 2x">
+                        <a href="/HocSinh/Home/Index" title="">
+                            <img src="~/Assets/HocSinh/img/logo.png" alt="" srcset="~/Assets/HocSinh/img/01_Logo_2x.png 2x">
                         </a>
                     </div>
                     <!--logo end-->
                     <ul class="contact-add d-flex flex-wrap">
                         <li>
                             <div class="contact-info">
-                                <img src="~/Assets/Student/img/icon1.png" alt="">
+                                <img src="~/Assets/HocSinh/img/icon1.png" alt="">
                                 <div class="contact-tt">
                                     <h4>Hot line</h4><span>0204 3881 217</span>
                                 </div>
@@ -33,7 +33,7 @@
                         </li>
                         <li>
                             <div class="contact-info">
-                                <img src="~/Assets/Student/img/icon2.png" alt="">
+                                <img src="~/Assets/HocSinh/img/icon2.png" alt="">
                                 <div class="contact-tt">
                                     <h4>Mở Cửa</h4><span>T2-CN - 7 AM - 17 PM</span>
                                 </div>
@@ -41,7 +41,7 @@
                         </li>
                         <li>
                             <div class="contact-info">
-                                <img src="~/Assets/Student/img/icon3.png" alt="">
+                                <img src="~/Assets/HocSinh/img/icon3.png" alt="">
                                 <div class="contact-tt">
                                     <h4>Địa Chỉ</h4>
                                     <span>87X6+5R2, Phi Mô, Lạng Giang, Bắc Giang</span>
@@ -64,9 +64,9 @@
                 <div class="navigation-bar d-flex flex-wrap align-items-center">
                     <nav>
                         <ul>
-                            <li><a class="active" href="/Student/Home/Index" title="">Trang Chủ</a></li>
-                            @*<li><a href="/Student/Home/ThongTin" title="">Xe Bus</a></li>
-                                <li><a href="/Student/TuyenSinh/ListTuyenSinh" title="">Lịch Trình</a></li>*@
+                            <li><a class="active" href="/HocSinh/Home/Index" title="">Trang Chủ</a></li>
+                            @*<li><a href="/HocSinh/Home/ThongTin" title="">Xe Bus</a></li>
+                                <li><a href="/HocSinh/TuyenSinh/ListTuyenSinh" title="">Lịch Trình</a></li>*@
                             @if (Session["HocSinh"] == null)
                             {
                                 <li>
@@ -139,7 +139,7 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6 col-sm-6">
                             <div class="widget widget-about">
-                                <img src="~/Assets/Student/img/logo.png" alt="">
+                                <img src="~/Assets/HocSinh/img/logo.png" alt="">
                                 <p>Website mục đích để truyền đạt thông tin, tra cứu thông tin với học sinh THCS nhằm đăng kí các nguyện vọng vào các trường THPT Lạng Giang</p>
                             </div>
                             <!--widget-about end-->
@@ -149,14 +149,14 @@
                                 <ul class="contact-add">
                                     <li>
                                         <div class="contact-info">
-                                            <img src="~/Assets/Student/img/icon1.png" alt="">
+                                            <img src="~/Assets/HocSinh/img/icon1.png" alt="">
                                             <div class="contact-tt"><h4>Hot line</h4><span>0204 3881 217</span></div>
                                         </div>
                                         <!--contact-info end-->
                                     </li>
                                     <li>
                                         <div class="contact-info">
-                                            <img src="~/Assets/Student/img/icon2.png" alt="">
+                                            <img src="~/Assets/HocSinh/img/icon2.png" alt="">
                                             <div class="contact-tt">
                                                 <h4>Mở Cửa</h4>
                                                 <span>T2-CN - 7 AM - 17 PM</span>
@@ -166,7 +166,7 @@
                                     </li>
                                     <li>
                                         <div class="contact-info">
-                                            <img src="~/Assets/Student/img/icon3.png" alt="">
+                                            <img src="~/Assets/HocSinh/img/icon3.png" alt="">
                                             <div class="contact-tt">
                                                 <h4>Địa Chỉ</h4>
                                                 <span>87X6+5R2, Phi Mô,<br /> Lạng Giang, Bắc Giang</span>
@@ -202,7 +202,7 @@
         </footer>
         <!--footer end-->
     </div>
-    <script src="~/Assets/Student/js/bundle.min.js"></script><!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="~/Assets/HocSinh/js/bundle.min.js"></script><!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180910402-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
