--- a/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -160,7 +160,7 @@
                                 </a>
                             </li>
                             <li class="sidebar-nav">
-                                <a href="~/Admin/XeBus/Index">
+                                <a href="~/Admin/LichTrinh/Index">
                                     <i class="fa fa-sitemap"></i> Lịch Trình
                                 </a>
                             </li>
