--- a/DichVuBus/WebBus/Areas/Admin/Views/HocSinh/Edit.cshtml
+++ b/DichVuBus/WebBus/Areas/Admin/Views/HocSinh/Edit.cshtml
@@ -26,10 +26,13 @@
         @Html.DropDownListFor(m => m.tuyenDuongId, new SelectList(ViewBag.TuyenDuongList, "Id", "tenTuyen"), "Chọn tuyến đường", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.tuyenDuongId, "", new { @class = "text-danger" })
     </div>
-    <div class="form-group">
-        <label>Tài Khoản</label>
-        @Html.DropDownListFor(m => m.userId, new SelectList(ViewBag.UserList, "Id", "username", Model?.userId), "Chọn tài khoản", new { @class = "form-control" })
-        @Html.ValidationMessageFor(m => m.userId, "", new { @class = "text-danger" })
-    </div>
+    if (null != ViewBag.UserList)
+    {
+        <div class="form-group">
+            <label>Tài Khoản</label>
+            @Html.DropDownListFor(m => m.userId, new SelectList(ViewBag.UserList, "Id", "username", Model?.userId), "Chọn tài khoản", new { @class = "form-control" })
+            @Html.ValidationMessageFor(m => m.userId, "", new { @class = "text-danger" })
+        </div>
+    }
     <button type="submit" class="btn btn-primary">Cập nhật</button>
 }
